NEWS file for Transmission <http://transmission.m0k.org/>

1.00 (zzzz/xx/yy)
- All Platforms:
   + UPnP now performed by MiniUPnP
   + Option to prefer not using encryption
   + Restore `scrape' feature in the command-line interface client
   + Updated icon
- OS X:
   + Statistics window
   + Pieces Bar (return of Advanced Bar)
   + Availability Bar (overlay on regular bar)
   + Redesigned Leopard-like look
   + Leopard: Time Machine will ignore incomplete downloads
   + Display remaining time for seeding transfers
   + Sort by total activity
   + Leopard: Fix bug where text fields would reject localized double values
- GTK+:
   + Statistics window

0.95 (2007/12/04)
- All Platforms:
   + Fix router errors caused by sending too many tracker requests at once
   + Fix bug that let speed-limited torrents upload too quickly
   + Faster average upload speeds
   + Faster connection to peers after starting a torrent
   + Fix memory corruption error
   + Disable SWIFT for ratio-based trackers
- OS X:
   + Leopard: Fix for NAT-PMP port mapping
- GTK:
   + Fix Nokia 770 crash

0.94 (2007/11/25)
- All Platforms:
   + Faster average download speeds
   + Automatically ban peers that send us too many corrupt pieces
   + Fix a crash that occurred if a peer sent us an incomplete message
   + Fix portmapping crash
   + Fix bug that left files open after their torrents were stopped
   + Fix 0.93 file permissions bug
   + Fix tracker redirect error
   + Fix LTEP PEX bug

0.93 (2007/11/12)
- All Platforms:
   + Fix "router death" bug that impaired internet connectivity
   + Fix bug that could cause good peer connections to be lost
   + Tweak request queue code to improve download speeds
   + Better handling of very large files on 32bit systems
   + Consume less battery power on laptops
   + Fix minor IPC parsing error

0.92 (2007/11/05)
- All Platforms:
   + Fix 0.90 data corruption bugs
   + Fix 0.90 possible delay when quitting
   + Fix 0.90 small memory leaks
- OS X: